# py-dependency

./: main.py  pyproject.toml
.github/: dependabot.yml
tests/: test_py_dependency.py
