[tool.poetry]
name = "py-dependency"
version = "0.1.0"
description = ""
authors = ["Murilo <murilofechio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mfechiolib = {git = "git@github.com:mfechio/mfechiolib.git"}

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
